fix to alignment on home page

--- a/mainpage_stylesheet.css
+++ b/mainpage_stylesheet.css
@@ -98,5 +98,7 @@ html{
     background-size: cover;
     background-position: center;
     min-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
     
 }
